--- a/style.css
+++ b/style.css
@@ -1,37 +1,79 @@
 * {
-    font-family: Montserrat;
-    margin: 0;
-    padding: 0;
-}
-
-section {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-p {
-    width: 800px;
-    margin: 0 auto;
-    margin-top: 100px;
-    color: #FFF;
-}
-
-h1 {
-    color: #FFF;
-    font-family: Montserrat;
-}
-img {
-    width: 500px;
-    margin: 0 auto;
-}
-
-#intro {
-    flex-direction: column;
+  font-family: Montserrat;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: black;
-
+  @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+  background-color: black;
+  scroll-behavior: smooth;
 }
+body section {
+  width: 99vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #BAC6C9;
+}
+body section h1 {
+  font-family: "Press Start 2P", cursive;
+  margin: 0 auto;
+  margin: 30px;
+  color: #FFF;
+}
+body section p {
+  width: 40%;
+  margin: 0 auto;
+  line-height: 1.5rem;
+}
+body section img {
+  width: 40%;
+  margin: 0 auto;
+  border-radius: 100px;
+}
+body #starting-page {
+  flex-direction: column;
+}
+body #starting-page .typewriter #game-title {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid orange;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em;
+  /* Adjust as needed */
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink-caret {
+  from, to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
+body .section-column {
+  flex-direction: column;
+}
+body .section-column h2 {
+  margin: 50px;
+}
+body .section-column li {
+  line-height: 1.5rem;
+  list-style: none;
+}
+
+/*# sourceMappingURL=style.css.map */
