--- a/style.css
+++ b/style.css
@@ -7,7 +7,22 @@
 body {
   @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
   background-color: black;
-  scroll-behavior: smooth;
+}
+body .scroll-container .section2 {
+  justify-content: space-around;
+}
+body .scroll-container .section2 img {
+  margin-left: 100px;
+}
+body .scroll-container .section2 .story-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body .scroll-container .section2 .story-block p {
+  margin-top: 50px;
+  width: 65%;
 }
 body .scroll-container section {
   width: 99vw;
@@ -18,25 +33,31 @@ body .scroll-container section {
   color: #BAC6C9;
 }
 body .scroll-container section h1 {
-  font-family: "Press Start 2P", cursive;
+  font-family: "Press Start 2P";
   margin: 0 auto;
   margin: 30px;
   color: #FFF;
 }
 body .scroll-container section p {
   width: 40%;
-  margin: 0 auto;
   line-height: 1.5rem;
 }
 body .scroll-container section img {
   width: 40%;
-  margin: 0 auto;
   border-radius: 100px;
 }
-body .scroll-container #starting-page {
+body .section1 {
   flex-direction: column;
 }
-body .scroll-container #starting-page .typewriter #game-title {
+body .section1 h2 {
+  font-family: "Press Start 2P";
+  color: #FFF;
+}
+body .section1 .typewriter {
+  margin-top: 50px;
+}
+body .section1 .typewriter #game-title {
+  font-size: 2rem;
   overflow: hidden;
   /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid orange;
@@ -65,13 +86,13 @@ body .scroll-container #starting-page .typewriter #game-title {
     border-color: orange;
   }
 }
-body .scroll-container .section-column {
+body .section-column {
   flex-direction: column;
 }
-body .scroll-container .section-column h2 {
+body .section-column h2 {
   margin: 50px;
 }
-body .scroll-container .section-column li {
+body .section-column li {
   line-height: 1.5rem;
   list-style: none;
 }
